# SugarPy

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: deploy.yml
deploy/: nginx-sugarpy.conf
deploy/runtime/: Dockerfile
deploy/systemd/: sugarpy-cloudflared.service  sugarpy-jupyter.service
docs/: ARCHITECTURE.md  ASSIGNMENT_GUIDELINES.md  DEPLOY_DEMO.md  DEPLOY_STATE.md  LLM_EVAL.md  MAPLE_EXPORT.md  MATH_CELL_SPEC.md  PRODUCT_GUIDE.md  PROJECT_MAP.md  RUNBOOK.md  TESTING_PRINCIPLES.md
docs/verification/: TEMPLATE.md  assistant-context-validation-2026-03-19.md  assistant-photo-import-2026-03-18.md  assistant-photo-import-multifile-pdf-2026-03-20.md  (+11 more)
notebooks/: CircleIntersections_CAS.sugarpy  CircleIntersections_Textbook.sugarpy  CoreFeaturesDemo.ipynb  CoreFeaturesDemo.sugarpy  Projektopgaver_Rundkoersel_CAS.executed.html  Projektopgaver_Rundkoersel_CAS.executed.ipynb  Projektopgaver_Rundkoersel_CAS.ipynb  Projektopgaver_Rundkoersel_CAS.sugarpy  Rundkoersel_CAS.sugarpy  StudentTool.ipynb
scripts/: assistant-live-check.sh  build-runtime-image.sh  check  check-runtime-ui.sh  check-runtime.sh  checkpoint.sh  cleanup-runtime-containers.sh  deploy-local.sh  deploy-preflight.sh  deploy-remote.sh  doctor.sh  launch-dev.sh  launch.sh  release.sh  run-all.sh  runtime-critical-paths.txt  setup-gh-deploy-secrets.sh  start-jupyter-service.sh  start-work.sh  sync-functions.sh  test-all.sh  ui-check.sh
web/: .env  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+135 files in other folders)
